WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107876
Abort parsing when pending location change for threaded HTML parser
https://bugs.webkit.org/show_bug.cgi?id=107876
Summary
Abort parsing when pending location change for threaded HTML parser
Tony Gentilcore
Reported
2013-01-24 16:29:34 PST
Abort parsing when pending location change for threaded HTML parser
Attachments
Patch
(1.90 KB, patch)
2013-01-24 16:31 PST
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Gentilcore
Comment 1
2013-01-24 16:31:07 PST
Created
attachment 184606
[details]
Patch
Eric Seidel (no email)
Comment 2
2013-01-24 16:46:56 PST
Comment on
attachment 184606
[details]
Patch So this just makes us ignore the rest of this token batch. I assume other bits cause the parser to actually stop. It's still lame that we have to poll teh frame for this and it can't just tell us to stop!
Tony Gentilcore
Comment 3
2013-01-24 16:50:46 PST
(In reply to
comment #2
)
> (From update of
attachment 184606
[details]
) > So this just makes us ignore the rest of this token batch. I assume other bits cause the parser to actually stop.
Right
> It's still lame that we have to poll teh frame for this and it can't just tell us to stop!
Yeah, there's a FIXME by the other callsite. We should clean it up, but this is no worse than the main thread parser for now.
WebKit Review Bot
Comment 4
2013-01-24 22:01:17 PST
Comment on
attachment 184606
[details]
Patch Rejecting
attachment 184606
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 184606, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Eric Seidel']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Parsed 2 diffs from patch file(s). patch: **** Can't create file /tmp/pp3gjd7X : No space left on device patch: **** Can't create file /tmp/pplM8QPX : No space left on device Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Eric Seidel']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/16097597
WebKit Review Bot
Comment 5
2013-01-25 10:06:07 PST
Comment on
attachment 184606
[details]
Patch Clearing flags on attachment: 184606 Committed
r140842
: <
http://trac.webkit.org/changeset/140842
>
WebKit Review Bot
Comment 6
2013-01-25 10:06:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug