Abort parsing when pending location change for threaded HTML parser https://bugs.webkit.org/show_bug.cgi?id=107876

Reviewed by Eric Seidel.

The main thread parser does this in canTakeNextToken. Adding this check to the threaded parser causes us to pass
fast/loader/location-change-aborts-parsing.html.

No new tests because covered by existing tests.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::processTokensFromBackgroundParser):


Canonical link: https://commits.webkit.org/126157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140842 268f45cc-cd09-0410-ab3c-d52691b4dbfc